Add require in composer

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
       "homepage": "http://marceen.pl",
       "email": "marcin.zaremba@gmail.com"
     }
-  ]
+  ],
+  "require": {
+    "php": ">=5.3.2"
+  }
 }
