--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
     "require": {
 	    "m4rc1no5/color-bash-prompt": "@dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.8.*"
+    },
     "autoload": {
         "psr-0": {
             "": [
