--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_script:
   - composer global require phpunit/phpunit --no-update
   - composer install
 
-script: phpunit
+script: phpunit -c phpunit.xml
