--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ php:
 
 before_script:
   - curl -s http://getcomposer.org/installer | php
-  - php composer.phar --dev install
+  - php composer.phar --dev install -o
 
 script: phpunit --configuration phpunit.xml
