--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_script:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar --dev install -o
 
-script: phpunit --configuration phpunit.xml
+script: phpunit
