--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,8 @@
         "phpunit/phpunit": "4.8.*"
     },
     "autoload": {
-        "psr-0": {
-            "": [
-                "src/"
-            ]
+        "psr-4": {
+            "PHPDesignPatterns\\": "src/"
         }
     }
 }
